# R-Type

./: .gitignore  CMakeLists.txt  Makefile  README.md
client/: CMakeLists.txt
client/include/: ASound.hh  Background.hh  ISoundLoader.hh  SFMLHookEvent.hh  SFMLSound.hh  SFMLSoundLoader.hh  SFMLSprite.hh  SFMLWindow.hh  Score.hh  Text.hh  boss.hh  clientStates.hh  coords.hh  element.hh  graphicalController.hh  hookEvent.hh  missile.hh  monster.hh  obstacle.hh  player.hh  robot.hh  serializer.hh  set.hh  ship.hh  sprite.hh  window.hh  workQueue.hh
client/src/: Background.cpp  SFMLSound.cpp  SFMLSoundLoader.cpp  SFMLSprite.cpp  SFMLWindow.cpp  Score.cpp  Text.cpp  boss.cpp  clientStates.cpp  elementFactory.cpp  graphicalController.cpp  main.cpp  missile.cpp  monster.cpp  obstacle.cpp  player.cpp  robot.cpp  serializer.cpp  set.cpp  ship.cpp
documentation/: R-TypeRFC.rfc  graphicalEngine.mdj
ressources/: map.txt  map2.txt  samtest.txt
server/: CMakeLists.txt
server/GameHandler/: CMakeLists.txt  map.txt
server/GameHandler/include/: CollisionHandler.hh  ControllerFactory.hh  Core.hh  Decor.hh  ElementFactory.hh  File.hh  Game.hh  GameController.hh  GameElement.hh  GameFactory.hh  GameHandler.hh  GameScene.hh  IGame.hh  Parser.hh  Player.hh  Quadtree.hh  Rectangle.hh  Shot.hh
server/GameHandler/src/: CollisionHandler.cpp  ControllerFactory.cpp  Core.cpp  Decor.cpp  ElementFactory.cpp  File.cpp  Game.cpp  GameController.cpp  GameElement.cpp  GameFactory.cpp  GameHandler.cpp  GameScene.cpp  Parser.cpp  Player.cpp  Quadtree.cpp  Rectangle.cpp  Shot.cpp  main.cpp
server/core/: CMakeLists.txt
server/core/include/: NetworkHandler.hpp  Room.hpp  Server.hpp  workQueue.hh
server/core/src/: NetworkHandler.cpp  Room.cpp  Server.cpp  main.cpp
shared/: CMakeLists.txt
shared/Bildo/: Bildo.cpp  Bildo.hh  CMakeLists.txt
shared/C3-PO/: C3PO.cpp  C3PO.hh  CMakeLists.txt
shared/boss/: Boss.cpp  Boss.hh  CMakeLists.txt
shared/common/: CMakeLists.txt  RType.hpp
shared/dlloader/: CMakeLists.txt
shared/dlloader/include/: ADLibrary.hh  DLDictionary.hh  DLException.hh  DLHandler.hh  DLManager.hh  DLibrary.hh  IDLibrary.hh
shared/dlloader/include/Unix/: CUDLibrary.hh
shared/dlloader/include/Win/: CWDLibrary.hh
shared/dlloader/src/: ADLibrary.cpp  DLException.cpp  DLHandler.cpp  DLManager.cpp  DLibrary.cpp
shared/dlloader/src/Unix/: CUDLibrary.cpp
shared/dlloader/src/Win/: CWDLibrary.cpp
shared/dlloader_test/: CMakeLists.txt  main.cpp
shared/game_element/: AElement.cpp  AElement.hh  CMakeLists.txt  Decor.cpp  Decor.hh  ElementFactory.cpp  ElementFactory.hh  GameElement.cpp  GameElement.hpp  IElement.hh  Monster.cpp  Monster.hh  Player.cpp  Player.hh  Rectangle.hh  Shot.cpp  Shot.hh  TripleShot.cpp  TripleShot.hh
shared/lobby_protocol/: CMakeLists.txt
shared/lobby_protocol/include/: IMessage.hpp  Message.hpp
shared/lobby_protocol/src/: Message.cpp
shared/monster/: CMakeLists.txt  Monster.cpp  Monster.hh
shared/network/: CMakeLists.txt
shared/network/include/: ASocket.hpp  ASocketPoll.hpp  IListener.hpp  ISocket.hpp  ISocketFactory.hpp  ISocketPoll.hpp
shared/network/include/Unix/: SocketFactory.hpp  SocketPoll.hpp  SocketPoller.hpp  SocketTCP.hpp  SocketUDP.hpp
shared/network/include/Win/: Listener.hpp  SocketFactory.hpp  SocketPoll.hpp  SocketPoller.hpp  SocketTCP.hpp
shared/network/src/: ASocket.cpp  ASocketPoll.cpp  instantiate.cpp
shared/network/src/Unix/: Listener.cpp  SocketFactory.cpp  SocketPoll.cpp  SocketPoller.cpp  SocketTCP.cpp  SocketUDP.cpp
shared/network/src/Win/: Listener.cpp  SocketFactory.cpp  SocketPoll.cpp  SocketPoller.cpp  SocketTCP.cpp  SocketUDP.cpp
shared/observer/: CMakeLists.txt
shared/observer/include/: IObservable.hpp  IObserver.hpp  Observable.hpp  Observer.hpp
shared/observer/src/: Observable.cpp  Observer.cpp
shared/packet/: CMakeLists.txt
shared/packet/include/: APacket.hh  GameDataPacket.hh  IPacket.hh  InputPacket.hh  Packet.hh
shared/packet/src/: APacket.cpp  GameDataPacket.cpp  InputPacket.cpp  Packet.cpp
shared/threadpool/: CMakeLists.txt
shared/threadpool/include/: ICondVar.hh  IMutex.hh  IThread.hh  IThreadPool.hh  Task.hh  ThreadPool.hh
shared/threadpool/include/Unix/: CUCondVar.hh  CUMutex.hh  CUThread.hh
shared/threadpool/include/Win/: CWCondVar.hh  CWMutex.hh  CWThread.hh
shared/threadpool/src/: Task.cpp  Threadpool.cpp  instantiate.cpp
shared/threadpool/src/Unix/: CUCondVar.cpp  CUMutex.cpp  CUThread.cpp
shared/threadpool/src/Win/: CWCondVar.cpp  CWMutex.cpp  CWThread.cpp
shared/timer/: CMakeLists.txt
shared/timer/include/: ITimer.hpp  Timer.hpp
shared/timer/src/: Timer.cpp  instantiate.cpp
test_units/: CMakeLists.txt
test_units/C3PO_test/: CMakeLists.txt  main.cpp
test_units/bildo_test/: CMakeLists.txt  main.cpp
test_units/dlloader_test/: CMakeLists.txt  main.cpp
test_units/gamehandler_test/: CMakeLists.txt  main.cpp
test_units/lobby_test/: CMakeLists.txt  main.cpp
test_units/monster_test/: CMakeLists.txt  main.cpp
test_units/network_test/: CMakeLists.txt  Server.cpp  Server.hpp  main.cpp
test_units/packet_test/: CMakeLists.txt  main.cpp
test_units/parser_test/: CMakeLists.txt  main.cpp
test_units/server_test/: CMakeLists.txt
uml/: ServerCore.mdj  ThreadPoolDLL.mdj
