cmake_minimum_required(VERSION 3.4)

enable_language(CXX)

project(cpp_spider)

if (MSVC)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin/)
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin/)
  foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
    set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_HOME_DIRECTORY}/bin/)
    set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_HOME_DIRECTORY}/bin/)
    set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_HOME_DIRECTORY}/bin/)
  endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
  set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
endif(MSVC)

add_subdirectory(shared)
add_subdirectory(server)
add_subdirectory(test_units)

if (MSVC)
  add_subdirectory(client)
endif(MSVC)
