#DLLoader
add_subdirectory(dlloader)

#Common
add_subdirectory(common)

#GameElement
add_subdirectory(game_element)

#Observer
add_subdirectory(observer)

#Threadpool
add_subdirectory(threadpool)

#Timer
add_subdirectory(timer)

#Network
add_subdirectory(network)

#Lobby protocol
add_subdirectory(lobby_protocol)

#Packet
add_subdirectory(packet)

#Monster
add_subdirectory(monster)

#Bildo
add_subdirectory(Bildo)

#C3PO
add_subdirectory(C3-PO)

#Boss
add_subdirectory(boss)