#DLLoader
add_subdirectory(dlloader_test)

#Gamehandler
add_subdirectory(gamehandler_test)

#Network
add_subdirectory(network_test)

#Packet
add_subdirectory(packet_test)

#Lobby
add_subdirectory(lobby_test)

#Server
add_subdirectory(server_test)

#Parser
add_subdirectory(parser_test)

#Monster
add_subdirectory(monster_test)